[package]
name = "empty_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.1.4", features = ["iterator"] }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.37"
